--- a/gui/forms/MainWindow.ui
+++ b/gui/forms/MainWindow.ui
@@ -49,7 +49,112 @@
       </layout>
      </widget>
     </item>
-    <item row="0" column="2" rowspan="4">
+    <item row="5" column="1">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="5" column="0">
+     <widget class="QFrame" name="controlFrame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="zoomLabel">
+             <property name="text">
+              <string>Zoom     </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="lowestValueLabel">
+             <property name="text">
+              <string>0.1x</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSlider" name="zoomHorizontalSlider">
+             <property name="minimum">
+              <number>0</number>
+             </property>
+             <property name="value">
+              <number>50</number>
+             </property>
+             <property name="sliderPosition">
+              <number>50</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="highestValueLabel">
+             <property name="text">
+              <string>10x</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout"/>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QPushButton" name="unRefineOnce">
+             <property name="text">
+              <string>&lt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="refine">
+             <property name="text">
+              <string>||</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="refineOnce">
+             <property name="text">
+              <string>&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pause">
+             <property name="text">
+              <string>&gt;&gt;</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="2" rowspan="6">
      <widget class="QFrame" name="optionFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -58,21 +163,21 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="0">
+       <item row="0" column="1">
         <widget class="QToolBox" name="optionToolBox">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <widget class="QWidget" name="preProcessPage">
           <property name="geometry">
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>324</width>
-            <height>461</height>
+            <width>304</width>
+            <height>432</height>
            </rect>
           </property>
           <attribute name="label">
@@ -107,8 +212,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>324</width>
-            <height>461</height>
+            <width>315</width>
+            <height>432</height>
            </rect>
           </property>
           <attribute name="label">
@@ -168,8 +273,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>236</width>
-            <height>145</height>
+            <width>304</width>
+            <height>432</height>
            </rect>
           </property>
           <attribute name="label">
@@ -179,23 +284,26 @@
            <property name="fieldGrowthPolicy">
             <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
            </property>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Interior</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QComboBox" name="insideInsertionMethodComboBox">
+           <item row="0" column="0" colspan="2">
+            <widget class="QComboBox" name="newPointMethodComboBox">
              <item>
               <property name="text">
-               <string>Bisection</string>
+               <string>Bisect Longest Edge</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Centroid</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>Lepp-Bisection</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>Circumcenter</string>
               </property>
              </item>
              <item>
@@ -210,25 +318,30 @@
              </item>
              <item>
               <property name="text">
-               <string>Circumcenter</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Centroid</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
                <string>Off-Center</string>
               </property>
              </item>
             </widget>
            </item>
-           <item row="1" column="0">
+          </layout>
+         </widget>
+         <widget class="QWidget" name="InsertionPage">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>387</width>
+            <height>432</height>
+           </rect>
+          </property>
+          <attribute name="label">
+           <string>Inserción</string>
+          </attribute>
+          <layout class="QFormLayout" name="formLayout">
+           <item row="0" column="0" colspan="2">
             <widget class="QLabel" name="label_2">
              <property name="text">
-              <string>Borde</string>
+              <string>Interior</string>
              </property>
             </widget>
            </item>
@@ -236,77 +349,87 @@
             <widget class="QComboBox" name="borderInsertionMethodComboBox">
              <item>
               <property name="text">
-               <string>Bisection</string>
+               <string>Inserción Básica</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Rivara</string>
+               <string>Flip Diagonal (Delaunay)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Ruppert</string>
-              </property>
-             </item>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_3">
-             <property name="text">
-              <string>Restringida</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QComboBox" name="restrictedInsertionMethodComboBox">
-             <item>
-              <property name="text">
-               <string>Bisection</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Rivara</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Ruppert</string>
+               <string>Cavity (Delaunay)</string>
               </property>
              </item>
             </widget>
            </item>
            <item row="3" column="1">
-            <widget class="Line" name="line">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+            <widget class="QComboBox" name="outsideNewPointCaseComboBox">
+             <item>
+              <property name="text">
+               <string>Bisectar Arista Más Larga</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="4" column="0" colspan="2">
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Una Arista Restringida</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
-            <widget class="QComboBox" name="insertionTypeComboBox">
+           <item row="5" column="1">
+            <widget class="QComboBox" name="restrictedInsertionMethodComboBox">
              <item>
               <property name="text">
-               <string>Flip Diagonal</string>
+               <string>Inserción Básica</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Cavity</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Split Edge</string>
+               <string>Intercambio de Diagonales Restringido</string>
               </property>
              </item>
             </widget>
            </item>
-           <item row="4" column="0">
+           <item row="6" column="0" colspan="2">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Dos Aristas Restringidas</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
+            <widget class="QComboBox" name="comboBox">
+             <item>
+              <property name="text">
+               <string>Inserción Básica</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="8" column="0" colspan="2">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Triangulo Restringido</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="1">
+            <widget class="QComboBox" name="comboBox_3">
+             <item>
+              <property name="text">
+               <string>Omitir</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="2" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>Tipo Inserción</string>
+              <string>Fuera de Malla</string>
              </property>
             </widget>
            </item>
@@ -317,8 +440,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>151</width>
-            <height>43</height>
+            <width>304</width>
+            <height>432</height>
            </rect>
           </property>
           <attribute name="label">
@@ -357,104 +480,6 @@
           </layout>
          </widget>
         </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="0">
-     <widget class="QFrame" name="controlFrame">
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <item>
-            <widget class="QLabel" name="zoomLabel">
-             <property name="text">
-              <string>Zoom     </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="lowestValueLabel">
-             <property name="text">
-              <string>0.1x</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSlider" name="zoomHorizontalSlider">
-             <property name="minimum">
-              <number>0</number>
-             </property>
-             <property name="value">
-              <number>50</number>
-             </property>
-             <property name="sliderPosition">
-              <number>50</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="highestValueLabel">
-             <property name="text">
-              <string>10x</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item>
-            <widget class="QPushButton" name="refine">
-             <property name="text">
-              <string>||</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="refineOnce">
-             <property name="text">
-              <string>&gt;</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="pause">
-             <property name="text">
-              <string>&gt;&gt;</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
        </item>
       </layout>
      </widget>
